# FlyDSL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-whl.yaml  flydsl.yaml  publish-pypi.yaml  test-whl.yaml
docs/: architecture_guide.md  cute_layout_algebra_guide.md  kernel_authoring_guide.md  layout_system_guide.md  prebuilt_kernels_guide.md  testing_benchmarking_guide.md
docs/api/: dsl.rst
docs/tutorials/: basic_usage.rst  kernel_development.rst
examples/: 01-vectorAdd.py  02-tiledCopy.py  03-tiledMma.py  04-preshuffle_gemm.py
include/flydsl-c/: FlyDialect.h  FlyROCDLDialect.h
include/flydsl/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/flydsl/Conversion/FlyGpuToLLVM/: FlyGpuToLLVM.h
include/flydsl/Conversion/FlyToROCDL/: FlyToROCDL.h
include/flydsl/Dialect/Fly/IR/: CMakeLists.txt  FlyAttrDefs.td  FlyDialect.h  FlyDialect.td  FlyInterfaces.td  FlyOps.td  FlyTypeDefs.td
include/flydsl/Dialect/Fly/Transforms/: CMakeLists.txt  IntTupleLowering.td  LayoutLowering.td  MemrefLowering.td  Passes.h  Passes.td
include/flydsl/Dialect/Fly/Utils/: IntTupleUtils.h  IntUtils.h  LayoutUtils.h  NormalForm.h  ThrValLayoutMacro.h.inc  TiledOpUtils.h
include/flydsl/Dialect/FlyROCDL/IR/: Atom.td  CMakeLists.txt  CopyAtom.td  Dialect.h  Dialect.td  MmaAtom.td
kernels/: __init__.py  blockscale_preshuffle_gemm.py  gemm_common_gfx1250.py  gemm_fp8fp4_gfx1250.py  kernels_common.py  layernorm_kernel.py  layout_utils.py  mfma_epilogues.py  mfma_preshuffle_pipeline.py  mixed_moe_gemm_2stage.py  mixed_preshuffle_gemm.py  moe_blockscale_2stage.py  moe_gemm_2stage.py  moe_reduce.py  pa_decode_fp8.py  pipeline_utils.py  preshuffle_gemm.py  preshuffle_gemm_flyc.py  rmsnorm_kernel.py  softmax_kernel.py  wmma_gemm_gfx1250.py
lib/: CMakeLists.txt
lib/Bindings/Python/: BindingUtils.h  DLTensorAdaptor.h  FlyExtension.cpp  FlyROCDLExtension.cpp
lib/CAPI/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt
lib/CAPI/Dialect/Fly/: CMakeLists.txt  FlyDialect.cpp
lib/CAPI/Dialect/FlyROCDL/: CMakeLists.txt  FlyROCDLDialect.cpp
lib/CAPI/LlvmConfig/: CMakeLists.txt  llvm.cc  llvm.h
lib/Conversion/: CMakeLists.txt
lib/Conversion/FlyGpuToLLVM/: CMakeLists.txt  FlyGpuToLLVM.cpp
lib/Conversion/FlyToROCDL/: CMakeLists.txt  FlyToROCDL.cpp
lib/Dialect/Fly/: CMakeLists.txt
lib/Dialect/Fly/IR/: FlyAttrDefs.cpp  FlyDialect.cpp  FlyOps.cpp  FlyTypeDefs.cpp
lib/Dialect/Fly/Transforms/: FlyCanonicalize.cpp  LayoutLowering.cpp
lib/Dialect/Fly/Utils/: IntTupleUtils.cpp  IntUtils.cpp  NormalForm.cpp
lib/Dialect/FlyROCDL/: CMakeLists.txt  Dialect.cpp
lib/Dialect/FlyROCDL/CDNA3/: CopyAtom.cpp  MmaAtom.cpp
lib/Runtime/: FlyRocmRuntimeWrappers.cpp
python/flydsl/: __init__.py
python/flydsl/compiler/: __init__.py  ast_rewriter.py  jit_argument.py  jit_executor.py  jit_function.py  kernel_function.py  llvm_options.py  protocol.py
python/flydsl/compiler/backends/: __init__.py  base.py  rocm.py
python/flydsl/expr/: __init__.py  arith.py  buffer_ops.py  derived.py  gpu.py  meta.py  numeric.py  primitive.py  rocdl.py  typing.py  vector.py
python/flydsl/expr/rocdl/: __init__.py  tdm_ops.py  universal.py
python/flydsl/expr/utils/: arith.py
python/flydsl/lang/ir/: types.py
python/flydsl/runtime/: device.py
python/flydsl/utils/: __init__.py  env.py  logger.py  smem_allocator.py
python/mlir_flydsl/: CMakeLists.txt  FlyRegisterEverything.cpp  flydsl_exports.ld
python/mlir_flydsl/dialects/: FlyOps.td  FlyROCDL.td  fly.py  fly_rocdl.py
scripts/: build.sh  build_llvm.sh  build_wheels.sh  dumpir.sh  run_benchmark.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_common.py  utils.py
tests/kernels/: __init__.py  benchmark_common.py  test_blockscale_preshuffle_gemm.py  test_gemm_fp8fp4_gfx1250.py  test_layernorm.py  test_moe_blockscale.py  test_moe_gemm.py  test_moe_reduce.py  test_pa.py  test_preshuffle_gemm.py  test_quant.py  test_ref.py  test_rmsnorm.py  test_softmax.py  test_vec_add.py  test_wmma_gemm_gfx1250.py
tests/kernels/utils/: fp4_utils.py
tests/mlir/Conversion/: fly_gpu_to_llvm.mlir  gpu_ops.mlir  memref_alloca.mlir  memref_ops.mlir  mma_atom.mlir  pointer_ops.mlir  type_conversion.mlir
tests/mlir/LayoutAlgebra/: coalesce.mlir  composition.mlir  construction.mlir  coordinate.mlir  divide.mlir  int_tuple.mlir  product.mlir  size_cosize.mlir
tests/mlir/Transforms/: canonicalize.mlir  layout_lowering.mlir
tests/pyir/: test_launch_overhead.py  test_layout_algebra.py  test_rocir_print.py  test_static_vs_dynamic.py
tests/python/examples/: aot_example.py
tests/unit/: test_async_object_vs_deps.py  test_compile_hints.py  test_jit_stream_param.py  test_multi_stream_launch.py
tools/: CMakeLists.txt
tools/fly-opt/: CMakeLists.txt  fly-opt.cpp
