[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  # `setup.py` may invoke `./flir/build.sh` which runs CMake configuration that expects
  # these Python build deps to be importable in the current environment.
  "pybind11>=2.10",
  "nanobind>=2.0",
  "numpy",
  "cmake",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "F403",
  "F405",
]

[tool.ruff.lint.isort]
known-first-party = ["flydsl"]
